fixed all ml-integration for prediction